# spdlog

./: CMakeLists.txt
include/spdlog/: common.h  logger.h
include/spdlog/details/: pattern_formatter_impl.h
include/spdlog/sinks/: file_sinks.h  sink.h
